spec: chadow private messages